# linorobot2

./: .env  .gitignore  .gitmodules  README.md  docker-compose.dev.yaml  docker-compose.isaacsim.yaml  docker-compose.yaml  docker-compose.yolo.yaml
linorobot2_description/: CMakeLists.txt
linorobot2_description/launch/: description.launch.py
linorobot2_description/mecanum_wheel_left/: CMakeLists.txt  package.xml
linorobot2_description/mecanum_wheel_left/meshes/: base_link.STL  roller11.STL  roller12.STL  roller14.STL  roller15.STL  roller2.STL  roller3.STL  roller4.STL  roller6.STL
linorobot2_description/mecanum_wheel_left/urdf/: mecanum_wheel_left.urdf
linorobot2_description/mecanum_wheel_right/: CMakeLists.txt  package.xml
linorobot2_description/mecanum_wheel_right/meshes/: plate1.STL  plate2.STL  roller10.STL  roller11.STL  roller14.STL  roller15.STL  roller6.STL  roller9.STL
linorobot2_description/mecanum_wheel_right/urdf/: mecanum_wheel_right.urdf
linorobot2_description/meshes/mecanum_wheel_left/: plate1.STL  plate2.STL  roller1.STL  roller10.STL  roller13.STL  roller5.STL  roller7.STL  roller8.STL  roller9.STL
linorobot2_description/meshes/mecanum_wheel_right/: base_link.STL  drum.STL  roller1.STL  roller12.STL  roller13.STL  roller2.STL  roller3.STL  roller4.STL  roller5.STL  roller7.STL  roller8.STL
linorobot2_description/rviz/: description.rviz
linorobot2_description/urdf/: mecanum_properties.urdf.xacro
linorobot2_description/urdf/mech/: base.urdf.xacro  end_channel.urdf.xacro  mecanum_wheel.urdf.xacro  mecanum_wheel_left.urdf.xacro  mecanum_wheel_right.urdf.xacro  side_channel.urdf.xacro
linorobot2_description/urdf/robots/: mecanum.urdf  (+1 more)
linorobot2_interfaces/: CMakeLists.txt  package.xml
linorobot2_interfaces/srv/: GoToNamedPose.srv
linorobot2_navigation/: CMakeLists.txt  package.xml
linorobot2_navigation/config/: amcl copy.yaml  amcl.yaml  behaviors.yaml  bt.yaml  controller.yaml  filter_mask_server.yaml  lifecycle_manager.yaml  lifecycle_manager_costmap_filters.yaml  map_editor.yaml  map_server.yaml  named_poses.yaml  navigate_through_poses.xml  navigate_to_pose.xml  navigation.yaml  navigation_sim.yaml  planner.yaml  slam.yaml  slam_lifecycle_manager.yaml  vel_smoother.yaml
linorobot2_navigation/launch/: keepout.launch.py  map_editor.launch.py  map_navigation.launch.py  navigation.launch.py  slam.launch.py  slam_bringup.launch.py  slam_navigation.launch.py
linorobot2_navigation/linorobot2_navigation/: laser_scan_merger.py  navigate_to_named_pose.py  path_visualizer.py  traj_visualizer.py  waypoint_tester.py
linorobot2_navigation/maps/: greenhouse.pgm  greenhouse.yaml  greenhouse2.pgm  greenhouse2.yaml  greenhouse_keepout.pgm  greenhouse_keepout.xcf  greenhouse_keepout.yaml  greenhouse_plants.pgm  greenhouse_plants.yaml  greenhouse_plants_0_05_res.pgm  greenhouse_plants_0_05_res.yaml  greenhouse_plants_cleaned.pgm  keepout_mask.pgm  keepout_mask.yaml  map.yaml  playground_denoised.pgm  playground_filled_in.pgm  playground_unedited.pgm  warehouse.pgm  warehouse.yaml  warehouse_blocks.pgm  warehouse_blocks.yaml  warehouse_blocks_keepout.pgm  warehouse_cleanedup.pgm  warehouse_keepout.pgm  warehouse_keepout.yaml
linorobot2_navigation/rviz/: linorobot2_map_editor.rviz  linorobot2_navigation.rviz  linorobot2_slam.rviz
(+1093 files in other folders)
