<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum_wheel_right</name>
  <version>0.1.0</version>
  <description>URDF and meshes for right mecanum wheel</description>
  <maintainer email="support@ecoationlabs.ca">Ecoation Labs</maintainer>
  <license>License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>